--- a/cloud-consumer-order80/src/main/resources/application.yaml
+++ b/cloud-consumer-order80/src/main/resources/application.yaml
@@ -1,2 +1,14 @@
 server:
   port: 80
+spring:
+  application:
+    name: cloud-order-service
+
+eureka:
+  client:
+    #表示是否将自己注册斤eurekaServer，默认是true
+    register-with-eureka: true
+    #表示是否从eurekaserver抓取已有的注册信息，默认true。单节点无所谓，继续必须设置true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
