--- a/cloud-consumer-order80/src/main/resources/application.yaml
+++ b/cloud-consumer-order80/src/main/resources/application.yaml
@@ -11,4 +11,4 @@ eureka:
     #表示是否从eurekaserver抓取已有的注册信息，默认true。单节点无所谓，继续必须设置true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
