--- a/cloud-consumer-feign-order80/src/main/resources/application.yaml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yaml
@@ -18,4 +18,7 @@ feign:
         connectTimeout: 50000
         #指的是建立连接后从服务器读取到可用资源所用的时间
         readTimeout: 50000
-
+logging:
+  level:
+    #feign日志以什么级别监控哪个接口
+    com.shy.springcloud.service.PaymentFeignService: debug
