--- a/cloud-config-center-3344/src/main/resources/application.yaml
+++ b/cloud-config-center-3344/src/main/resources/application.yaml
@@ -12,8 +12,20 @@ spring:
             - springcloud-config
         default-label: main
       #读取分支
-#      label: main
+      #      label: main
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+
 eureka:
   client:
     service-url:
       defaultZone:  http://localhost:7001/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
