nacos实现集群配置

--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yaml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yaml
@@ -11,3 +11,5 @@ spring:
       config:
         server-addr: localhost:8848 #配置中心地址
         file-extension: yaml #指定yaml格式的配置
+        namespace: e9685f4e-9c96-40ea-a86f-b9d830f045f5
+        group: DEV_GROUP
